--- a/client/css/init.css
+++ b/client/css/init.css
@@ -1,173 +1,37 @@
-
-
-#title {
-    position: absolute;
-    top: 5%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    color: white;
-    font-size: 3.8em;
-  }
-
-#section1{
+#section1 {
     position: relative;
 }
 
-.scroll{
-    position: absolute;
-    bottom: 6%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    font-size: 1.2em;
-    font-family: 'Bebas Neue';
-    font-weight: 500;
+#section1{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3em;
+    color: white;
+    flex-direction: row;
 }
 
 .flecha{
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    font-family: 'Bebas Neue';
-    font-weight: 500;
-    animation: 1.5s flecha infinite;
+    font-family: 'Courier New', Courier, monospace !important;
 }
-
-
-.img-logo{
-    position: absolute;
-    left: 50%;
-    bottom: -1%;
-    transform: translate(-50%, -50%);
-    z-index: 1;  
-}
-
 
 @keyframes flecha {
-    0%{
+    0% {
         bottom: -4%;
     }
 
-    50%{
+    50% {
         bottom: 0%;
-    
+
     }
-    100%{
+
+    100% {
         bottom: -4%;
     }
 }
+
 ::-webkit-scrollbar {
     display: none;
-}
-
-@media (max-width: 320px) { 
-    #title{
-        font-size: 1.8em;
-        top: 15%;
-    }
-    img{
-        width: 250px;
-        height: 250px;
-    }
-    .img-logo{
-        bottom: -5%;
-    }
-    .scroll{
-        font-size: 1em;
-        width: 100%;
-        left: 71%;
-        bottom: 10%;
-    }
-}
-
-/* Small phones */
-@media (min-width: 321px) and (max-width: 400px) { 
-    #title{
-        font-size: 1.8em;
-        top: 15%;
-    }
-    img{
-        width: 300px;
-        height: 300px;
-    }
-    .img-logo{
-        bottom: 10%;
-    }
-    .scroll{
-        font-size: 1em;
-        width: 100%;
-        left: 71%;
-        bottom: 10%;
-    }
-}
-
-    /* big phones */
-
-@media (min-width: 401px) and (max-width: 751px) {
-    #title{
-        font-size: 2.4em;
-        top: 15%;
-    }
-    img{
-        width: 370px;
-        height: 370px;
-    }
-    .img-logo{
-        bottom: 0%;
-    }
-    .scroll{
-        font-size: 1.3em;
-        width: 100%;
-        left: 71%;
-        bottom: 5%;
-    }
-}
-
-
-    /* Tablets */
-
-@media (min-width: 752px) and (max-width: 1100px) {
-    #title{
-        font-size: 2.9em;
-        top: 10%;
-    }
-    img{
-        width: 500px;
-        height: 500px;
-    }
-    .img-logo{
-        bottom: 0%;
-    }
-    .scroll{
-        font-size: 1.7em;
-        width: 100%;
-        left: 80%;
-        bottom: 5%;
-    }
-
-}
-
-
-    /* Laptps */
-
-@media (min-width: 1101px) and (max-width: 1400px) {
-    #title{
-        font-size: 3em;
-        top: 15%;
-    }
-    img{
-        width: 500px;
-        height: 500px;
-    }
-    .img-logo{
-        bottom: -17%;
-    }
-    .scroll{
-        font-size: 1.7em;
-        width: 100%;
-        left: 87%;
-        bottom: 5%;
-    }
 }
