--- a/client/css/about.css
+++ b/client/css/about.css
@@ -1,5 +1,43 @@
 
 
+
+.instagram:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    transition: 0.6s;
+}
+
+.github:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    transition: 0.6s;
+}
+
+.info-btn {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    display: none;
+    transition: 0.6s;
+}
+
+.contact-buttons {
+    width: 35%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    color: black;
+    font-family: 'Bebas Neue';
+    margin-top: 5%;
+}
+
+.text-content{
+    color: black;
+    font-size: 20px;
+}
+
+
 .map-spain {
     width: 700px;
     height: 300px;
@@ -9,199 +47,23 @@
 }
 
 
-/* Small phones */
-@media (max-width: 400px) { 
-    .map-spain {
-        width: 1000px;
-        height: 300px;
-        transform: scale(0.8);
-        position: absolute;
-        left: -250px;
-        bottom: 10px;
-    }
-    .firstCo{
-        height: 111vh;
-    }
-
-    .text-about {
-        width: 80% !important;
-    }
-
-    .text-about>p {
-        font-size: 15px !important;
-    }
-
-    .title-about {
-        margin-left: 15% !important;
-    }
-
-    h1 {
-        margin-top: 0% !important;
-
-    }
-    .firstCo{
-        background-color: red;
-    }
-}
-
-    /* big phones */
-
-@media (min-width: 401px) and (max-width: 751px) {
-    .map-spain {
-        width: 1000px;
-        height: 300px;
-        transform: scale(0.8);
-        position: absolute;
-        left: -250px;
-        bottom: 10px;
-    }
-    .firstCo{
-        height: 111vh;
-    }
-
-    .text-about {
-        width: 80% !important;
-    }
-
-    .text-about>p {
-        font-size: 15px !important;
-    }
-
-    .title-about {
-        margin-left: 15% !important;
-    }
-
-    h1 {
-        margin-top: 0% !important;
-
-    }
-    .firstCo{
-        background-color: green;
-    }
-}
-
-
-    /* Tablets */
-
-@media (min-width: 752px) and (max-width: 1100px) {
-    .map-spain {
-        width: 1000px;
-        height: 300px;
-        transform: scale(0.8);
-        position: absolute;
-        left: -250px;
-        bottom: 10px;
-    }
-    .firstCo{
-        height: 111vh;
-    }
-
-    .text-about {
-        width: 80% !important;
-    }
-
-    .text-about>p {
-        font-size: 15px !important;
-    }
-
-    .title-about {
-        margin-left: 15% !important;
-    }
-
-    h1 {
-        margin-top: 0% !important;
-
-    }
-    .firstCo{
-        background-color: yellow;
-    }
-}
-
-
-    /* Laptps */
-
-@media (min-width: 1101px) and (max-width: 1400px) {
-    .map-spain {
-        width: 1000px;
-        height: 300px;
-        transform: scale(0.8);
-        position: absolute;
-        left: -250px;
-        bottom: 10px;
-    }
-    .firstCo{
-        height: 111vh;
-    }
-
-    .text-about {
-        width: 80% !important;
-    }
-
-    .text-about>p {
-        font-size: 15px !important;
-    }
-
-    .title-about {
-        margin-left: 15% !important;
-    }
-
-    h1 {
-        margin-top: 0% !important;
-
-    }
-    .firstCo{
-        background-color: blue;
-    }
-}
-
-
-
-h1 {
-    color: black;
-    font-family: 'Bebas Neue';
-    margin-top: 5%;
-}
-
 .title-about {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
     margin-left: 15%;
-
 }
 
 .text-about {
     width: 35%;
 }
 
-.contact-buttons{
-    width: 35%;
-    height: 10%;
-    display: flex;
-    justify-content: center;
-}
 
-.icon{
+.icon {
     height: 75px;
     width: 65px;
     border-radius: 5px;
     transition: 0.6s;
 }
-.instagram:hover{
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    transition: 0.6s;
-}
 
-.github:hover{
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    transition: 0.6s;
-}
-
-.info-btn{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    display: none;
-    transition: 0.6s;
-}
