--- a/client/css/media.css
+++ b/client/css/media.css
@@ -1,6 +1,4 @@
-
-
-@media screen and (min-width: 200px) and (max-width: 800px) and (max-height: 1000px){
+@media screen and (min-width: 200px) and (max-width: 800px) and (max-height: 1000px) {
     .img-logo {
         left: 50%;
         top: 25%;
@@ -8,10 +6,12 @@
         transform: translate(-50%, -50%);
         z-index: 1;
     }
-    img{
+
+    img {
         width: 360px;
         height: 360px;
     }
+
     #title {
         position: absolute;
         bottom: 20%;
@@ -22,6 +22,7 @@
         font-size: 2.0em;
         font-family: 'Bebas Neue';
     }
+
     .scroll {
         position: absolute;
         bottom: 10%;
@@ -32,7 +33,7 @@
         font-family: 'Bebas Neue';
         font-weight: 500;
     }
-    
+
     .flecha {
         position: absolute;
         left: 50%;
@@ -42,10 +43,31 @@
         font-weight: 500;
         animation: 1.5s flecha infinite;
     }
+
+    .map-spain {
+        display: none;
+    }
+
+    .title-about {
+        margin-left: 10%;
+    }
+
+    .text-about {
+        width: 85%;
+        text-align: justify;
+    }
+
+    .contact-buttons {
+        width: 80%;
+    }
+
+    .text-about>p {
+        font-size: 16px;
+    }
+
 }
 
-@media screen and (min-width: 800px) and (max-width: 1500px) and (max-height: 800px){
-
+@media screen and (min-width: 800px) and (max-width: 1500px) and (max-height: 800px) {
     .img-logo {
         left: 50%;
         top: 25%;
@@ -64,6 +86,7 @@
         font-size: 3.8em;
         font-family: 'Bebas Neue';
     }
+
     .scroll {
         position: absolute;
         bottom: 6%;
@@ -74,7 +97,7 @@
         font-family: 'Bebas Neue';
         font-weight: 500;
     }
-    
+
     .flecha {
         position: absolute;
         left: 50%;
@@ -84,11 +107,16 @@
         font-weight: 500;
         animation: 1.5s flecha infinite;
     }
+
+    .map-spain{
+        right: 250px;
+    }
+
 }
 
 
 
-@media screen and (min-width: 800px) and (max-width: 1500px)and (min-height: 1000px){
+@media screen and (min-width: 800px) and (max-width: 1500px)and (min-height: 1000px) {
     .img-logo {
         left: 50%;
         top: 25%;
@@ -107,6 +135,7 @@
         font-size: 3.8em;
         font-family: 'Bebas Neue';
     }
+
     .scroll {
         position: absolute;
         bottom: 6%;
@@ -117,7 +146,7 @@
         font-family: 'Bebas Neue';
         font-weight: 500;
     }
-    
+
     .flecha {
         position: absolute;
         left: 50%;
@@ -126,6 +155,29 @@
         font-family: 'Bebas Neue';
         font-weight: 500;
         animation: 1.5s flecha infinite;
+    }
+
+    .map-spain {
+        transform: scale(1.2);
+        bottom: 100px;
+        right: 250px;
+    }
+
+    .title-about {
+        margin-left: 15%;
+    }
+
+    .text-about {
+        width: 75%;
+        text-align: justify;
+    }
+
+    .contact-buttons {
+        width: 75%;
+    }
+
+    .text-about>p {
+        font-size: 20px;
     }
 }
 
@@ -150,6 +202,7 @@
         font-family: 'Bebas Neue';
         font-weight: 600;
     }
+
     .scroll {
         position: absolute;
         bottom: 6%;
@@ -160,7 +213,7 @@
         font-family: 'Bebas Neue';
         font-weight: 500;
     }
-    
+
     .flecha {
         position: absolute;
         left: 50%;
@@ -171,11 +224,4 @@
         animation: 1.5s flecha infinite;
     }
 
-	.map-spain {
-		width: 700px;
-		height: 300px;
-		transform: scale(1.7);
-		position: absolute;
-		right: 350px;
-	}
 }
