--- a/client/css/media.css
+++ b/client/css/media.css
@@ -65,6 +65,17 @@
         font-size: 16px;
     }
 
+    
+    .parent-card {
+        height: 600px;
+        width: 97%;
+    }
+
+    .name-header{
+        width: 80%;
+    }
+    
+
 }
 
 @media screen and (min-width: 800px) and (max-width: 1500px) and (max-height: 800px) {
@@ -179,6 +190,9 @@
     .text-about>p {
         font-size: 20px;
     }
+
+
+
 }
 
 
