--- a/client/css/about.css
+++ b/client/css/about.css
@@ -1,69 +1,3 @@
-
-
-
-.instagram:hover {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    transition: 0.6s;
+.firstCo{
+    background-color: black;
 }
-
-.github:hover {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    transition: 0.6s;
-}
-
-.info-btn {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    display: none;
-    transition: 0.6s;
-}
-
-.contact-buttons {
-    width: 35%;
-    height: 10%;
-    display: flex;
-    justify-content: center;
-}
-
-h1 {
-    color: black;
-    font-family: 'Bebas Neue';
-    margin-top: 5%;
-}
-
-.text-content{
-    color: black;
-    font-size: 20px;
-}
-
-
-.map-spain {
-    width: 700px;
-    height: 300px;
-    transform: scale(1.7);
-    position: absolute;
-    right: 350px;
-}
-
-
-.title-about {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    margin-left: 15%;
-}
-
-.text-about {
-    width: 35%;
-}
-
-
-.icon {
-    height: 75px;
-    width: 65px;
-    border-radius: 5px;
-    transition: 0.6s;
-}
-
