--- a/client/signup/style.css
+++ b/client/signup/style.css
@@ -62,7 +62,7 @@
     font-weight: bold;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 770px) {
     .container-flex{
         flex-direction: column;
     }
@@ -78,6 +78,12 @@
 }
 
 @media (max-width: 1300px) {
+    .col-before{
+        width: 100% !important;
+    }
+}
+
+@media (max-width: 1900px) {
     .col-before{
         width: 100% !important;
     }
