--- a/client/css/about.css
+++ b/client/css/about.css
@@ -1,3 +1,24 @@
 .firstCo{
     background-color: black;
 }
+
+
+
+
+
+
+.title5{
+	font-size: 1.7em;
+    
+	font-weight: bold;
+		text-shadow: -1px 1px 0 #ffffff,
+				  1px 1px 0 #ffffff,
+				 1px -1px 0 #ffffff,
+				-1px -1px 0 #ffffff;
+				transition: .9s;
+				color: black;
+                position: absolute;
+                transform: translate(-0%, 0%);
+                bottom: 42%;
+                font-family: 'Bebas Neue';
+}
