--- a/client/app2/style.css
+++ b/client/app2/style.css
@@ -12,7 +12,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    border: 1px solid black;
     width: 60%;
     height: 700px;
     margin-top: 25px;
@@ -60,3 +59,70 @@
     justify-content: flex-end;
     margin-right: 25px;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 235px;
+    background-color: white;
+    border-right: 1px solid #f3f1f1;
+    position: fixed;
+    z-index: 1222;
+    height: 100%;
+    display: flex; /* add this */
+    flex-direction: column; /* add this */
+    justify-content: center; /* add this */
+    align-items: center; /* add this */
+    padding: 0 !important;
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(-100%);
+  }
+  ul.active {
+    transform: translateX(0%);
+  }
+  ul.new {
+    transform: translateX(-100%);
+  }
+  
+  
+  li a {
+    display: block;
+    color: #000 !important;
+    padding: 8px 0px;
+    text-decoration: none;
+  }
+
+  li{
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Change the link color on hover */
+  li a:hover {
+    background-color: black;
+    color: white !important;
+  }
+
+    li:hover {
+    background-color: black;
+    color: white !important;
+  }
+ 
+
+
+
+  #logo {
+    width: 100px;
+    transition: transform 1s;
+    cursor: pointer;
+  }
+  
+  .rotate {
+    transform: rotate(360deg);
+  }
+
+  .v-bottom-navigation{
+    box-shadow: none !important;
+  }
+
