--- a/client/app2/style.css
+++ b/client/app2/style.css
@@ -69,24 +69,27 @@ ul {
     border-right: 1px solid #f3f1f1;
     position: fixed;
     z-index: 1222;
-    height: 100%;
+    height: 50%;
+    top: 25%;
     display: flex; /* add this */
     flex-direction: column; /* add this */
-    justify-content: center; /* add this */
+    justify-content: space-evenly; /* add this */
     align-items: center; /* add this */
     padding: 0 !important;
     transition: transform 0.3s ease-in-out;
     transform: translateX(-100%);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 5px;  
   }
-  ul.active {
+  .ul-parent.active {
     transform: translateX(0%);
   }
-  ul.new {
+  .ul-parent.new {
     transform: translateX(-100%);
   }
   
   
-  li a {
+  li .v-icon {
     display: block;
     color: #000 !important;
     padding: 8px 0px;
@@ -99,13 +102,9 @@ ul {
   }
   
   /* Change the link color on hover */
-  li a:hover {
-    background-color: black;
-    color: white !important;
-  }
 
-    li:hover {
-    background-color: black;
+  li:hover {
+    background-color: rgb(212, 212, 212);
     color: white !important;
   }
  
