--- a/client/app2/style.css
+++ b/client/app2/style.css
@@ -125,3 +125,13 @@ ul {
     box-shadow: none !important;
   }
 
+
+  .left-arrow:hover{
+    color: black !important;
+    font-weight: bold;
+    transition: 0.6s !important;
+  }
+
+  .left-arrow{
+    transition: 0.6s;
+  }
