--- a/client/profile/style.css
+++ b/client/profile/style.css
@@ -75,3 +75,13 @@
   .left-arrow{
     transition: 0.6s;
   }
+
+  #avatar-logo:hover {
+    transition: transform 1s;
+    cursor: pointer;
+    transform: rotateY(360deg);
+  }
+  #avatar-logo{
+    transition: transform 1s;
+  }
+  
