--- a/client/app2/style.css
+++ b/client/app2/style.css
@@ -135,3 +135,12 @@ ul {
   .left-arrow{
     transition: 0.6s;
   }
+
+  #ball {
+    width: 100px;
+    height: 20px;
+    background-color: black;
+    border-radius: 25px;
+    position: absolute;
+    z-index: 1;
+ }
