--- a/client/app2/style.css
+++ b/client/app2/style.css
@@ -26,6 +26,58 @@
     z-index: 9999;
     height: 78px !important;
 }
+body{
+  cursor: none;
+}
+.circle-main{
+	position: absolute;
+	width: 12px;
+	height: 12px;
+	margin-top: calc(-1 * 12px / 2);
+	margin-left: calc(-1 * 12px / 2);
+	border-radius: 50%;
+	transform: translate(-50%, -50%);
+	background: white;
+	pointer-events: none;
+	top: 0;
+	left: 0;
+	transition: opacity .3s;
+	mix-blend-mode: difference;
+	z-index: 2;
+}
+
+.circle-hide{
+	opacity: 0;
+}
+
+
+body{
+    cursor: none;
+
+}
+.second-circle{
+	position: absolute;
+	transition: transform .15s, width .3s, height .3s, margin .3s;
+	width: 40px;
+	height: 40px;
+	top: 0;
+	left: 0;
+	margin-top: calc(-1 * 40px / 2);
+	margin-left: calc(-1 * 40px / 2);
+	background: white;
+	border-radius: 50%;
+	pointer-events: none;
+	mix-blend-mode: difference;
+	z-index: 2;
+    
+}
+
+.circle-scale{
+	width: calc(40px * 2);
+	height: calc(40px * 2);
+	margin-top: calc(-1 * 40px);
+	margin-left: calc(-1 * 40px);
+}
 
 .header-title {
     width: 100%;
@@ -62,6 +114,7 @@
 
 ul {
     list-style-type: none;
+    cursor: default;
     margin: 0;
     padding: 0;
     width: 235px;
