--- a/client/css/media.css
+++ b/client/css/media.css
@@ -51,7 +51,7 @@
     }
 
     .name-header {
-        width: 80%;
+        width: 80% !important;
     }
 
     .typ {
@@ -105,11 +105,15 @@
 
     .ul-parent {
         width: 100%;
-        height: 12%;
+        height: 10%;
         flex-direction: row; /* add this */
         transform: translateX(0%);
         bottom: 0;
         top: unset;
+    }
+    .ul-parent3 {
+        width: 100%;
+
     }
 
       li{
@@ -133,6 +137,7 @@
       
       .parent-card-new{
         width: 100% !important;
+        height: 600px;
       }
 
       .ul-parent2.active{
@@ -161,6 +166,9 @@
       .header-card-2{
         margin-top: 20px;
       }
+      .header-card{
+        margin-bottom: 20px;
+      }
 
       .img-cover-2{
         height: 500px !important;
@@ -178,8 +186,69 @@
       .text-see-more{
         margin-top:  0 !important;
       }
-      
 
+      .avatar{
+        margin: 0;
+        top: 0;
+      }
+      .text-descr{
+        font-size: 14px;
+        text-align: justify;
+      }
+
+      #like-toggle2{
+        display: block !important;
+      }
+
+      .text-see-more-sign{
+        font-size: 1.7em !important;
+      }
+
+      #avprofile{
+        width: 100px !important;
+        height: 100px !important;
+      }
+      .name-profile{
+        margin-top: -15px !important;
+      }
+
+      .row-posts-profile{
+        margin-top: 60px !important;
+      }
+
+      .row-posts-myprofile{
+        margin-top: 10px !important;
+
+      }
+      .row-posts-follows{
+        margin-top: 150px !important;
+      }
+      .row-posts-myfollows{
+        margin-top: 10px !important;
+      }
+      .name-myprofile{
+        margin-top: 10px !important;
+      }
+
+      .row-posts{
+        width: 100% !important;
+        max-width: 100% !important;
+        justify-content: center;
+    }
+
+    .scrollable-posts{
+        width: 100% !important;
+    }
+
+    .col-3{
+        flex: 0 0 30% !important;
+        max-width: 30% !important;
+      }
+
+      .single-post{
+        height: 125px !important;
+        margin: 0 !important;
+      }
 }
 
 @media screen and (min-width: 800px) and (max-width: 1500px) and (max-height: 800px) {
@@ -222,6 +291,45 @@
         font-weight: 500;
         animation: 1.5s flecha infinite;
     }
+    .avatar{
+        margin-left: 0;
+        
+    }
+    .name-header{
+        margin-left: 25px;
+    }
+
+    .parent-card{
+        width: 90%;
+    }
+
+    .parent-card-new{
+        width: 80%;
+        height: 600px;
+    }
+
+    .row-posts-follows{
+        margin-top: 150px !important;
+      }
+
+      .name-profile{
+        margin-top: -15px !important;
+      }
+      .row-posts-profile{
+        margin-top: 50px !important;
+      }
+      #avprofile{
+        height: 150px !important;
+        width: 150px !important;
+      }
+      .name-myprofile{
+        margin-top: 0px !important;
+      }
+    
+      .row-posts-myprofile{
+        margin-top: 30px !important;
+      }
+
 
 }
 
@@ -282,9 +390,52 @@
     .final4{
         display: none !important;
     }
+    .avatar{
+        margin-left: 0;
+    }
+
+    .parent-card{
+        width: 80%;
+    }
+    .name-header{
+        margin-left: 25px;
+    }
+    .parent-card-new{
+        width: 80;
+    }
+
+    .row-posts{
+        width: 100% !important;
+        max-width: 100% !important;
+        justify-content: center;
+        
+    }
 
 
+    .scrollable-posts{
+        width: 100% !important;
+    }
 
+    .col-3{
+        flex: 0 0 30% !important;
+        max-width: 30% !important;
+      }
+
+      .row-posts-myfollows{
+        margin-top: -160px !important;
+      }
+      .name-myprofile{
+        margin-top: -60px !important;
+      }
+
+      .row-posts-myprofile{
+        margin-top: -70px !important;
+
+      }
+      #avprofile{
+        height: 150px !important;
+        width: 150px !important;
+      }
 }
 
 
@@ -328,6 +479,16 @@
         font-family: 'Bebas Neue';
         font-weight: 500;
         animation: 1.5s flecha infinite;
+    }
+
+    .avatar{
+        margin-left: 0;
+    }
+
+    #avprofile{
+        height: 150px !important;
+        width: 150px !important;
+
     }
 
 }
