--- a/client/publi/style.css
+++ b/client/publi/style.css
@@ -2,7 +2,9 @@
     box-shadow: none  !important;
 }
 
-
+body{
+  cursor: none;
+}
 .ul-parent2 {
     list-style-type: none;
     margin: 0;
@@ -22,7 +24,8 @@
     transition: transform 0.3s ease-in-out;
     transform: translateX(100%);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    border-radius: 5px;  
+    border-radius: 5px; 
+    cursor:default;
   }
 
   .ul-parent2.active {
@@ -51,6 +54,7 @@
 
 .ul-parent3 {
   list-style-type: none;
+  cursor:default;
   margin: 0;
   padding: 0;
   width: 335px;
@@ -78,4 +82,52 @@
   transform: translateX(-100%);
 }
 
-  
+.circle-main{
+	position: absolute;
+	width: 12px;
+	height: 12px;
+	margin-top: calc(-1 * 12px / 2);
+	margin-left: calc(-1 * 12px / 2);
+	border-radius: 50%;
+	transform: translate(-50%, -50%);
+	background: white;
+	pointer-events: none;
+	top: 0;
+	left: 0;
+	transition: opacity .3s;
+	mix-blend-mode: difference;
+	z-index: 2;
+}
+
+.circle-hide{
+	opacity: 0;
+}
+
+
+body{
+    cursor: none;
+
+}
+.second-circle{
+	position: absolute;
+	transition: transform .15s, width .3s, height .3s, margin .3s;
+	width: 40px;
+	height: 40px;
+	top: 0;
+	left: 0;
+	margin-top: calc(-1 * 40px / 2);
+	margin-left: calc(-1 * 40px / 2);
+	background: white;
+	border-radius: 50%;
+	pointer-events: none;
+	mix-blend-mode: difference;
+	z-index: 2;
+    
+}
+
+.circle-scale{
+	width: calc(40px * 2);
+	height: calc(40px * 2);
+	margin-top: calc(-1 * 40px);
+	margin-left: calc(-1 * 40px);
+}
