--- a/client/signup/style.css
+++ b/client/signup/style.css
@@ -10,6 +10,9 @@
     word-break: break-all;
 }
 
+body{
+    cursor: none;
+}
 .v-card__text {
     width: 100% !important;
 }
@@ -99,3 +102,52 @@ fieldset{
     border-radius: 0px !important;
 }
 
+.circle-main{
+	position: absolute;
+	width: 12px;
+	height: 12px;
+	margin-top: calc(-1 * 12px / 2);
+	margin-left: calc(-1 * 12px / 2);
+	border-radius: 50%;
+	transform: translate(-50%, -50%);
+	background: white;
+	pointer-events: none;
+	top: 0;
+	left: 0;
+	transition: opacity .3s;
+	mix-blend-mode: difference;
+	z-index: 2;
+}
+
+.circle-hide{
+	opacity: 0;
+}
+
+
+body{
+    cursor: none;
+
+}
+.second-circle{
+	position: absolute;
+	transition: transform .15s, width .3s, height .3s, margin .3s;
+	width: 40px;
+	height: 40px;
+	top: 0;
+	left: 0;
+	margin-top: calc(-1 * 40px / 2);
+	margin-left: calc(-1 * 40px / 2);
+	background: white;
+	border-radius: 50%;
+	pointer-events: none;
+	mix-blend-mode: difference;
+	z-index: 2;
+    
+}
+
+.circle-scale{
+	width: calc(40px * 2);
+	height: calc(40px * 2);
+	margin-top: calc(-1 * 40px);
+	margin-left: calc(-1 * 40px);
+}
