--- a/client/css/about.css
+++ b/client/css/about.css
@@ -3,10 +3,6 @@
 }
 
 
-
-
-
-
 .title5{
 	font-size: 1.7em;
     
@@ -24,129 +20,54 @@
 }
 
 
-.info-teo{
-	font-size: 2.7em;
-	font-weight: bold;
-		text-shadow: -1px 1px 0 #ffffff,
-				  1px 1px 0 #ffffff,
-				 1px -1px 0 #ffffff,
-				-1px -1px 0 #ffffff;
-				transition: .9s;
-				color: black;
 
-                bottom: 30px;
-                font-family: 'Tragicastle';
-				height: 120px;
-}
-
-
-.info-teo:hover{
-	text-shadow: none;
-	color: white;
-	text-shadow: -1px 1px 0 #000000,
-	1px 1px 0 #000000,
-   1px -1px 0 #000000,
-  -1px -1px 0 #000000;
-}
-
-.info-sergi{
-	font-size: 2.7em;
-	font-weight: bold;
-		text-shadow: -1px 1px 0 #ffffff,
-				  1px 1px 0 #ffffff,
-				 1px -1px 0 #ffffff,
-				-1px -1px 0 #ffffff;
-				transition: .9s;
-				color: black;
-
-                bottom: 30px;
-                font-family: 'Tragicastle';
-				height: 120px;
-}
-
-
-.info-sergi:hover{
-	text-shadow: none;
-	color: white;
-	text-shadow: -1px 1px 0 #000000,
-	1px 1px 0 #000000,
-   1px -1px 0 #000000,
-  -1px -1px 0 #000000;
-}
-
-.info-narcis{
-	font-size: 2.7em;
-	font-weight: bold;
-		text-shadow: -1px 1px 0 #ffffff,
-				  1px 1px 0 #ffffff,
-				 1px -1px 0 #ffffff,
-				-1px -1px 0 #ffffff;
-				transition: .9s;
-				color: black;
-
-                bottom: 30px;
-                font-family: 'Tragicastle';
-				height: 120px;
-}
-
-
-.info-narcis:hover{
-	text-shadow: none;
-	color: white;
-	text-shadow: -1px 1px 0 #000000,
-	1px 1px 0 #000000,
-   1px -1px 0 #000000,
-  -1px -1px 0 #000000;
-  flex-direction: row;
-}
-
-
-.info-new{
-	display: flex;
-	width: 55%;
-	height: 121px;
+#text-melia{
 	position: absolute;
-    transform: translate(-0%, 0%);
-	bottom:20%;
-	justify-content: space-evenly;
+	left: 27%;
+	bottom: 7%;
+	color: white;
+	display: flex;
+	font-size: 20px;
+	display: none;
+	flex-direction: column;
+}
+
+#text-teo{
+	position: absolute;
+	left: 45%;
+	bottom: 5%;
+	color: white;
+	display: flex;
+	font-size: 20px;
+	display: none;
+	flex-direction: column;
+}
+
+#text-narcis{
+	position: absolute;
+	left: 68%;
+	bottom: 5%;
+	color: white;
+	display: flex;
+	font-size: 20px;
+	flex-direction: column;
+	display: none;
+}
+
+.hover-us{
+	position: absolute;
+	bottom: 22%;
+	left: 7%;
+	color: white;
+	font-size: 40px;
+	font-family: 'Bebas Neue';
+	font-weight: bold;
+
 }
 
 .v-application .info{
 	background-color: transparent !important;
 }
-
-.content{
-	width: 35%;
-	height: 121px;
-	position: absolute;
-    transform: translate(-0%, 0%);
-	bottom:10%;
-	justify-content: center;
-	transition: all 0.9s ease-in-out 1s;
-}
-
-.teo{
-
-	transition: .9s;
-	font-size: 1em;
-	font-family: 'Bebas Neue';
-	display: none;
-
-}
-
-.sergi{
-
-	transition: .9s;
-	font-size:  1em;
-	font-family: 'Bebas Neue';
-	display: none;
-
-}
-.narcis{
-
-	transition: all 0.9s ease-in-out 1s;
-	font-size:  1em;
-	font-family: 'Bebas Neue';
-	display: none;
-
+.v-application p{
+	margin: 0 !important;
 }
