--- a/client/css/media.css
+++ b/client/css/media.css
@@ -224,9 +224,9 @@
         margin-top: 150px !important;
       }
       .row-posts-myfollows{
-        margin-top: 10px !important;
+        margin-top: 166px !important;
       }
-      .name-myprofile{
+      #name-myprofile{
         margin-top: 10px !important;
       }
 
@@ -249,6 +249,13 @@
         height: 125px !important;
         margin: 0 !important;
       }
+      #btn-edit{
+        margin-top: 10px !important;
+      }
+      #no-publis{
+        font-size: 2.5em !important;
+      }
+
 }
 
 @media screen and (min-width: 800px) and (max-width: 1500px) and (max-height: 800px) {
