--- a/client/signup/style.css
+++ b/client/signup/style.css
@@ -93,14 +93,14 @@ body{
 }
 
 
-fieldset{
+/* fieldset{
     outline: transparent;
     border-bottom: 1px solid grey  !important;
     border-top: 0px  !important;
     border-left: 0px  !important;
     border-right: 0px  !important;
     border-radius: 0px !important;
-}
+} */
 
 .circle-main{
 	position: absolute;
