--- a/client/css/media.css
+++ b/client/css/media.css
@@ -34,6 +34,10 @@
         font-weight: 500;
     }
 
+    #nav-buttons{
+      width: 100% !important;
+    }
+
     .flecha {
         position: absolute;
         left: 50%;
@@ -44,10 +48,21 @@
         animation: 1.5s flecha infinite;
     }
 
+    pre{
+      font-size: 14px !important;
+    }
+
+    .android-logo{
+      width: 90px;
+      height: 55px;
+    }
+    .btn-download{
+      transform: translate(0%, 0%) !important;
+    }
 
     .parent-card {
-        height: 600px;
         width: 97%;
+        margin-bottom: 50px;
     }
 
     .name-header {
@@ -101,6 +116,11 @@
 
     .final4{
         display: none !important;
+    }
+
+    #avatar-ul{
+      width: 47px !important;
+      height: 48px !important;
     }
 
     .ul-parent {
@@ -166,9 +186,7 @@
       .header-card-2{
         margin-top: 20px;
       }
-      .header-card{
-        margin-bottom: 20px;
-      }
+
 
       .img-cover-2{
         height: 500px !important;
@@ -190,6 +208,10 @@
       .avatar{
         margin: 0;
         top: 0;
+        width: 65px !important;
+        min-width: 65px !important;
+
+        height: 65px !important;
       }
       .text-descr{
         font-size: 14px;
@@ -246,14 +268,43 @@
       }
 
       .single-post{
-        height: 125px !important;
         margin: 0 !important;
+      }
+      .single-post2{
+        height: 125px  !important;
+        margin: 0 !important;
+
       }
       #btn-edit{
         margin-top: 10px !important;
       }
       #no-publis{
         font-size: 2.5em !important;
+      }
+
+      #menu-toggle5{
+        display: block !important;
+      }
+      #menu-toggle6{
+        display: block !important;
+      }
+      .ul-parent2{
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* Internet Explorer and Edge */
+      
+        /* Hide the scrollbar for Chrome, Safari, and Opera */
+        ::-webkit-scrollbar {
+          display: none;
+        }
+      }
+      .ul-parent3{
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* Internet Explorer and Edge */
+      
+        /* Hide the scrollbar for Chrome, Safari, and Opera */
+        ::-webkit-scrollbar {
+          display: none;
+        }
       }
 
 }
